# mathis_auto_login

./: README.md  setup.cfg
src/example_package/: mat.txt  mathis.py
src/mathis.egg-info/: PKG-INFO  SOURCES.txt
src/myproject.egg-info/: PKG-INFO  SOURCES.txt
