[metadata]
name = mathis
version = 0.0.4
author = mathis
author_email = mathisit052@gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mathismathis/mathis_auto_login
project_urls =
    Bug Tracker =https://github.com/mathismathis/mathis_auto_login/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
